--- a/ionosphere_bib.bib
+++ b/ionosphere_bib.bib
@@ -150,5 +150,163 @@ NUMBER = {2},
 ARTICLE-NUMBER = {368},
 }
 
+@article{abarbanel,
+AUTHOR = {H.D.I. Abarbanel and R. Brown and M.B. Kennel},
+TITLE={Local {L}yupanov Exponents computed from observed data},
+JOURNAL={J. Nonlinear Sci.},
+VOLUME={2},
+PAGES={343--365},
+YEAR=1992
+}
 
 
+@InProceedings{azencot,
+  title = 	 {Forecasting Sequential Data Using Consistent Koopman Autoencoders},
+  author =      {Azencot, O. and Erichson, N. B. and Lin, V. and Mahoney, M.},
+  booktitle = 	 {Proceedings of the 37th International Conference on Machine Learning},
+  pages = 	 {475--485},
+  year = 	 {2020},
+  editor = 	 {III, Hal Daumé and Singh, Aarti},
+  volume = 	 {119},
+  publisher =  {PMLR},
+  series = 	 {Proceedings of Machine Learning Research}
+  }
+
+@article{lago_dldmd,
+	author = {D. J. Alford-Lago and C. W. Curtis and A. T. Ihler and O. Issan},
+	date-modified = {2022-05-04 18:58:34 -0700},
+	journal = {Chaos},
+	pages = {033116},
+	title = {Deep learning enhanced dynamic mode decomposition},
+	volume = {32},
+	year = {2022}}
+
+@article{lago_ssdmd,
+	author = {D. J. Alford-Lago and C. W. Curtis and A. Ihler and K. A. Zawdie},
+	date-modified = {2022-05-04 18:57:11 -0700},
+	journal = {ArXiv (submitted to AGU Radio Sci.)},
+	title = {A scale-separated dynamic mode decomposition from observations of the ionospheric electron density profile},
+	volume = {https://doi.org/10.48550/arXiv.2204.10215},
+	year = {2022}}
+
+@book{kutz,
+	address = {Philadelphia, PA},
+	author = {J.N. Kutz and S.L. Brunton and B.W. Brunton and J.L. Proctor},
+	publisher = {SIAM},
+	title = {Dynamic Mode Decomposition: Data-driven modeling of complex systems},
+	year = 2016}
+
+@article{kutz2,
+	author = {J.N. Kutz and J.L. Proctor and S.L. Brunton},
+	journal = {Complexity},
+	pages = {1--16},
+	title = {Applied {K}oopman theory for partial differential equations and data-driven modeling of spatio-temporal systems},
+	volume = {2018},
+	year = 2018}
+
+@article{kutz3,
+	author = {T. Askham and J.N. Kutz},
+	journal = {SIAM J. Appl. Dyn. Sys.},
+	pages = {380--416},
+	title = {Variable projection methods for an optimized dynamic mode decomposition},
+	volume = {2018},
+	year = 2018}
+
+@article{lusch,
+	author = {B. Lusch and J. N. Kutz and S. L. Brunton},
+	journal = {Nature Comm.},
+	pages = {4950},
+	title = {Deep learning for universal linear embeddings of nonlinear dynamics},
+	volume = {9},
+	year = 2018}
+
+@article{arbabi,
+AUTHOR={H. Arbabi and I. Mezic},
+TITLE={Ergodic Theory, dynamic mode decomposition, and computation of spectral properties of the {K}oopman operator},
+JOURNAL={SIAM Appl. Dyn. Sys.},
+VOLUME={16},
+PAGES={2096--2126},
+YEAR=2017
+}
+
+@article{brunton_havok,
+AUTHOR={S.L. Brunton and B.W. Brunton and J.L. Proctor and and E. Kaiser and J.N. Kutz},
+TITLE={Chaos as an intermittently forced linear system},
+JOURNAL={Nature Comm.},
+VOLUME={8},
+PAGES={},
+YEAR=2017
+}
+
+@article{champion2019data,
+  title={Data-driven discovery of coordinates and governing equations},
+  author={Champion, K. and Lusch, B. and Kutz, J. N. and Brunton, S. L.},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={116},
+  number={45},
+  pages={22445--22451},
+  year={2019},
+  publisher={National Acad Sciences}
+}
+
+
+@article{kadierdan,
+AUTHOR={K. Kadierdan and J.N. Kutz and S.L. Brunton},
+TITLE={{SIND}y-{PI}: a robust algorithm for parallel implicit sparse identification of nonlinear dynamics},
+JOURNAL={Proc. Roc. Soc. A},
+VOLUME={476},
+PAGES={20200279},
+DOI={10.1098/rspa.2020.0279},
+YEAR=2020
+}
+
+@incollection{takens,
+author="Takens, F.",
+title="Detecting strange attractors in turbulence",
+booktitle="Dynamical Systems and Turbulence, Warwick 1980",
+year="1981",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="366--381",
+isbn="978-3-540-38945-3"
+}
+
+@book{robinson,
+AUTHOR={J.C. Robinson},
+TITLE={Infinite Dimensional Dynamical Systems},
+PUBLISHER={Cambridge University Press},
+ADDRESS = {Cambridge, UK},
+YEAR=2001
+}
+
+@article{citanovic,
+  title = {Reduction of SO(2) Symmetry for Spatially Extended Dynamical Systems},
+  author = {Budanur, N. B. and Cvitanovi\ifmmode \acute{c}\else \'{c}\fi{}, P. and Davidchack, R. L. and Siminos, E.},
+  journal = {Phys. Rev. Lett.},
+  volume = {114},
+  issue = {8},
+  pages = {084102},
+  numpages = {5},
+  year = {2015},
+  month = {Feb},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.114.084102},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.114.084102}
+}
+
+@article{kassam,
+AUTHOR={AK Kassam and L.N. Trefethen},
+TITLE={Fourth-order time-stepping for stiff {PDE}s},
+JOURNAL={SIAM J. Sci. Comp.},
+VOLUME={26},
+PAGES={1214--1233},
+YEAR=2005
+}
+
+@book{berkooz,
+AUTHOR={G. Berkooz and P. Holmes and J.L. Lumley and C.W. Rowley},
+TITLE={Turbulence, Coherent Structures, Dynamical Systems, and Symmetry},
+PUBLISHER={Cambridge University Press},
+ADDRESS={Cambridge, UK},
+YEAR=2012
+}
