--- a/er_dmd.tex
+++ b/er_dmd.tex
@@ -107,6 +107,33 @@ and
 \]
 Note, in \cite{clainche}, models with distinct matrices ${\bf K}_{l_{j}}$ for each lag were eschewed for something much closer to what is now called Hankel DMD.  While effective, and in several respects simpler, such an approach does not as readily allow for more thoughtful model selection as we explain in the next section.  
 
+That said, a price is paid for working with separate lag matrices when one wants to look at the corresponding one-step Koopman operator, say $\mathcal{K}^{\delta}$ which would be approximated by
+\begin{equation}
+\mathcal{K}^{\delta} \approx {\bf K}_{a} \equiv 
+\begin{pmatrix} 
+0 & I & 0 & \cdots & 0 & 0 \\ 
+0 & 0 & I & \ddots & 0 & 0 \\ 
+\vdots & \vdots & \vdots & \ddots & \ddots & \vdots \\
+0 & 0 & 0 & \cdots & I & 0 \\
+\tilde{{\bf K}}_{l_{N_{L}}} & \tilde{{\bf K}}_{l_{N_{L}}-1} & \cdots & \cdots & \tilde{{\bf K}}_{2} & \tilde{{\bf K}}_{1} 
+\end{pmatrix}
+\label{full_matrix}
+\end{equation}
+where each $s\times s$ matrix $\tilde{{\bf K}}_{j}$ is given by 
+\[
+\tilde{{\bf K}}_{j} = \left\{
+\ba{rl}  
+{\bf K}_{l_{k}}, & j=l_{k}\in l_{c}\\
+{\bf 0}, & j\neq l_{k}\in l_{c}
+\ea
+\right.
+\]
+Finding the eigenvalues of ${\bf K}_{a}$ is equivalent to finding the roots of the polynomial $p_{a}(z)$ where 
+\begin{equation}
+p_{a}(z) = \text{det}\left(\sum_{k=0}^{N_{L}-1}{\bf K}_{l_{N_{L}-k}}~z^{k} - z^{N_{L}}{\bf I} \right). 
+\label{characpoly}
+\end{equation}
+While not useful in a numerical context, this formula will prove useful when charaterizing the eigenvalues of ${\bf K}_{a}$ relative to the choice of lags $l_{c}$.  
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Determining Causality through Information Theory and Entropic Regression}
@@ -194,18 +221,34 @@ with $\sigma=10$, $\rho=28$, and $\beta = 8/3$.  These parameter choices ensure 
 We look at data for $20\leq t \leq 22$, with $d=150$, corresponding to $1.5$ units of non-dimensional time.  We then compare our ER-DMD model to a model using all possible lags for $21.5\leq t \leq 22$.  The ERDMD algorithm converges to $l_{c}=\left\{1,149\right\}$.  The results are seen in Figure \ref{fig:lorenz_compare_d_150}.  As can be seen, all three curves are indistinguishable to the eye, showing that a far more minimal lag model is able to reconstruct dynamics with as much practical accuracy as the full HODMD method.    
 \begin{figure}[!h]
 \centering
-\includegraphics[width=1\textwidth]{lorenz_compare_w_mx_lag_150}
-\caption{Comparison of ERDMD and all lags HODMD model against true trajectory for Lorenz-63 system.  The vertial bar indicates the maximum lag choice of $d=150$. The ERDMD algorithm converges to $l_{c}=\left\{1,149\right\}$.}
+\begin{tabular}{c}
+\includegraphics[width=.8\textwidth]{Lorenz_compare_w_mx_lag_150}\\
+(a) Trajectories\\
+\includegraphics[width=.8\textwidth]{Lorenz_error_compare_w_mx_lag_150}\\
+(b) Error Comparison (semi-log scale)
+\end{tabular}
+\caption{Direct comparison of ERDMD and all lags HODMD model against the true trajectory for the Lorenz-63 system (a), and error across dimensions for the ERDMD and all lags HODMD method (b).  The black line indicates the ERDMD result while the red indicates the all lags HODMD result.  The solid vertial bar indicates the maximum lag choice of $d=150$, while the dashed line indicates the end of the reconstruction interval and the beginning of the forecasting regime. The ERDMD algorithm converges to $l_{c}=\left\{1,149\right\}$.}
 \label{fig:lorenz_compare_d_150}
 \end{figure}
 
+Constructing the full Koopman one-step approximation ${\bf K}_{a}$ as in Equation \eqref{full_matrix} allows us to find the affiliated Koopman spectrum as seen in the left side of Figure \ref{fig:lorenz_spectrum_d_150}.  
 \begin{figure}[!h]
 \centering
-\includegraphics[width=.5\textwidth]{Lorenz_spectrum_w_mx_lag_149}
-\caption{Spectrum of corresponding ERDMD Koopman operator.  The ERDMD algorithm converges to $l_{c}=\left\{1,149\right\}$.  The solid/red line is the unit circle, provided for comparison.}
+\begin{tabular}{c}
+\includegraphics[width=1\textwidth]{Lorenz_detail_spectrum_w_mx_lag_149}
+\end{tabular}
+\caption{Spectrum of corresponding ERDMD Koopman operator for Lorenz-63 with $d=150$ on the left side, with a detail comparison to the reduced approximation (blue crosses) on the right side near (1,0).  The ERDMD algorithm converges to $l_{c}=\left\{1,149\right\}$.  The solid/red line is the unit circle, provided for reference.}
 \label{fig:lorenz_spectrum_d_150}
 \end{figure}
-
+We see that because of the strong separation in lags as seen in $l_{c}$ that the affiliated characteristic polynomial $p_{a}(z)$ is given explicitly by
+\[
+p_{a}(z) = \text{det}\left({\bf K}_{149} + \left({\bf K}_{1}-z{\bf I}\right)z^{149} \right).
+\]
+If we look at the interior of the unit disc so that $|z|<1$, then our innermost eigenvalues to leading order are found from the roots of $\tilde{p}_{a}(z)$ where
+\[
+\tilde{p}_{a}(z) = \text{det}\left({\bf K}_{149} + {\bf K}_{1}z^{149}\right)
+\]
+or the leading roots are found by finding the generalized eigenvalues $\tilde{z}=z^{149}$ of the two matrix problem ${\bf K}_{149} + {\bf K}_{1}\tilde{z}$.  Looking at this spectrum in Figure \ref{fig:lorenz_spectrum_d_150} (b), we see that most of the features in the spectrum seen in the full spectrum on the left are present in the right.  Thus, the damping in the dynamics comes almost entirely from the disparity in lag values.  Looking at Figure \ref{fig:lorenz_spectrum_d_150} (c), which shows a detailed comparison of the two spectra for complex phase $\phi$ such that $|\phi|<\frac{\pi}{8}$, we see that the full spectrum gets closer to the unit circle and even has two modes which just cross the unit circle.  Otherwise, the reduced model well describes the damping modes, though we also see that the lag matrices ${\bf K}_{1}$ and ${\bf K}_{149}$ balance for more delicate dynamics along the unit circle.    
 
 By way of contrast though, if we set the maximum lag $d=100$, and build reconstructions for $21\leq t \leq 22$, we find that the ERDMD results differ  markedly in terms of the determined lags though ultimately not in terms of accuracy; see Figure \ref{fig:lorenz_compare_d_100}.  In this case, the ERDMD algorithm converges onto the lag choices 
 $$
@@ -213,19 +256,75 @@ l_{c}=\left\{1,15, 26, 35, 45, 48, 68, 73, 97,99\right\}.
 $$  By choosing a lag horizon which does not fully capture the approximate period of oscillation in the dynamics, we need significantly more information to accurately reconstruct the data, though still nowhere as much as the full HODMD model.  
 \begin{figure}[!h]
 \centering
-\includegraphics[width=1\textwidth]{lorenz_compare_w_mx_lag_100}
+\includegraphics[width=.8\textwidth]{Lorenz_error_compare_w_mx_lag_100}
 \caption{Comparison of ERDMD and all lags HODMD model against true trajectory for Lorenz-63 system.  The ERDMD reconstruction is in solid black in the figure.  The vertial bar indicates the maximum lag choice of $d=100$. The ERDMD algorithm converges to $l_{c}=\left\{1,15, 26, 35, 45, 48, 68, 73, 97,99\right\}$.}
 \label{fig:lorenz_compare_d_100}
 \end{figure}
  
+We can likewise find the spectrum of ${\bf K}_{a}$ as seen in Figure \ref{fig:lorenz_spectrum_d_100}.  In this case, the larger spread of lags makes ready identification of positions in the spectrum to lag structure more difficult, though we see that 
 \begin{figure}[!h]
 \centering
 \includegraphics[width=.5\textwidth]{Lorenz_spectrum_w_mx_lag_99}
-\caption{Spectrum of corresponding ERDMD Koopman operator.  The ERDMD algorithm converges to $l_{c}=\left\{1,15, 26, 35, 45, 48, 68, 73, 97,99\right\}$.  The solid/red line is the unit circle, provided for comparison.}
+\caption{Spectrum of corresponding ERDMD Koopman operator for Lorenz-63 for $d=100$.  The ERDMD algorithm converges to $l_{c}=\left\{1,15, 26, 35, 45, 48, 68, 73, 97,99\right\}$.  The solid/red line is the unit circle, provided for comparison.}
 \label{fig:lorenz_spectrum_d_100}
 \end{figure}
- 
- 
+The more uniform spread in lag values makes any estimates of the spectrum using reduced models less useful beyond identifying the most strongly damped modes.  
+
+
+\subsection*{Rossler Equation}
+To see how the ERDMD method works on problems with multiple scales, we now look at modeling dynamics coming from the Rossler system, given by the equations
+\begin{align*}
+\dot{y}_{1} & = -y_{2} - y_{3}\\
+\dot{y}_{2} & = y_{1} + ay_{2}\\
+\dot{y}_{3} & = b + y_{3}(y_{1}-c)\\
+\end{align*} 
+where $a=.1$, $b=.1$, $c=14$.  To see the role the multiple time scales play in this proble, letting $\epsilon=.1$, then we see $a=b=\epsilon$ and $c=1.4/\epsilon$.  Letting $\tau = t/\epsilon$ and setting $y_{3} = \epsilon^{2}\tilde{y}_{3}(t,\tau)$, to leading order, in $y_{1}$ and $y_{2}$ we find 
+\[
+\begin{pmatrix}y_{1} \\ y_{2}\end{pmatrix} = e^{\epsilon t/2}\begin{pmatrix}\cos(t) & -\sin(t) \\ \sin(t) & \cos(t)\end{pmatrix}\begin{pmatrix}y_{1,0} \\ y_{2,0}\end{pmatrix} + \mathcal{O}(\epsilon^{2}),
+\]
+so that we have $\mathcal{O}(1)$ planar oscillations complimented by slow growth away from the origin.  Likewise, in $\tilde{y}_{3}$ we find 
+\[
+\p_{\tau}\tilde{y}_{3} + \epsilon \p_{t}\tilde{y}_{3} = 1 - 1.4\tilde{y}_{3} + \epsilon y_{1}\tilde{y}_{3}.
+\]
+This then motivates the expansion 
+\[
+\tilde{y}_{3}(t,\tau) = c(t) e^{-1.4\tau} + \frac{1}{1.4}\left(1-e^{-1.4\tau} \right) + \epsilon \tilde{y}_{3,1}(t,\tau) + \cdots, 
+\]
+which, to remove secularities then gets us the equation for $c(t)$ of the form
+\[
+\frac{dc}{dt} = y_{1}(t)\left(c - \frac{1}{1.4} \right).
+\]
+So we have 
+\[
+c(t) = \frac{1}{1.4} + \left(c(0)-\frac{1}{1.4}\right)e^{\int_{0}^{t}y_{1}(s)ds},
+\]
+so that $\tilde{y}_{3}$ stays small until the slow growth in $y_{1}$ due to the $e^{\epsilon t/2}$ term pushes the dynamics out of the plane.  
+
+We build reconstructions for $25\leq t \leq 40$.  To get accurate results, we chose $d=1000$, for which choice the method converged to the set $l_{c}$ with
+\[
+l_{c} = \left\{1, 3, 170, 436, 553, 665, 988\right\}.
+\]
+As can be seen in Figure \ref{fig:rossler}, our accuracy relies on capturing a full departure from the fast through the slow manifold.  This also explains the need for such a large choice of $d$ relative to what was used for the Lorenz-63 system.  
+\begin{figure}[!h]
+\centering
+\begin{tabular}{c}
+\includegraphics[width=.8\textwidth]{Rossler_compare_w_mx_lag_1000}\\
+(a) Trajectories \\
+\includegraphics[width=.8\textwidth]{Rossler_error_compare_w_mx_lag_1000}\\
+(b) Error Comparison
+\end{tabular}
+\caption{Comparison of ERDMD and all lags HODMD model against true trajectory for the Rossler system.  The ERDMD reconstruction is in solid black in the figure.  The vertial bar indicates the maximum lag choice of $d=1000$. The ERDMD algorithm converges to $l_{c}=\left\{1, 3, 170, 436, 553, 665, 988\right\}$.}
+\label{fig:rossler}
+\end{figure}
+
+We likewise can find the affiliated spectrum as seen in Figure \ref{fig:rossler_spectrum}. 
+\begin{figure}[!h]
+\centering
+\includegraphics[width=.5\textwidth]{Rossler_spectrum_w_mx_lag_988}\\
+\caption{Spectrum of corresponding ERDMD Koopman operator for the Rossler system.  The ERDMD algorithm converges to $l_{c}= \left\{1, 3, 170, 436, 553, 665, 988\right\}$.  The solid/red line is the unit circle, provided for comparison.}
+\label{fig:rossler_spectrum}
+\end{figure}
+
 \subsection*{Kuramoto--Sivashinsky Equation}
 To look at a more intricate and higher dimensional example, we now study the Kuramoto--Sivashinsky (KS) equation given by 
 \[
@@ -259,6 +358,36 @@ The results for reconstruction can be seen in Figure \ref{fig:ks_compare_d_200},
 \label{fig:ks_compare_d_200}
 \end{figure} 
  
+We see in Figure \ref{fig:ksspectrum} (a) the corresponding full spectrum affiliated with our method.  Again, the strong separation of lags in $l_{c}$ motivate looking at the roots of the reduced polynomial
+\[
+\tilde{p}_{a}(z) = \text{det}\left(z^{35}{\bf K}_{123} + z^{17}{\bf K}_{141} + {\bf K}_{158} \right).
+\] 
+Note, letting $\tilde{z}=z^{17}$, we can write 
+\[
+z^{35} = \tilde{z}^{2}e^{\ln \tilde{z}/17} \approx \tilde{z}^{2}
+\]
+so long as $|z|$ is not too close to zero.  We can then find the affiliated approxmiate companion matrix representation for $\tilde{p}_{a}(z)$ in the form
+\[
+\tilde{{\bf K}}_{a} = 
+\begin{pmatrix} 
+0 & I \\ 
+-\tilde{{\bf K}}_{2} & -\tilde{{\bf K}}_{1} \\
+\end{pmatrix}
+\]
+where 
+\[
+\tilde{{\bf K}}_{1} = {\bf K}_{123}^{-1}{\bf K}_{141}, ~ \tilde{{\bf K}}_{2} = {\bf K}_{123}^{-1}{\bf K}_{158}.
+\]
+The reduced spectrum is seen in Figure \ref{fig:ksspectrum} (b), where we again can see the most damped modes come from the highest lags in our Koopman model.  We can also look at the case of $|z|>1$, in which case our asymptotic arguments would lead us to just look at the largest eigenvalues of ${\bf K}_{1}$.  These results are compared in Figure \ref{fig:ksspectrum} (c), where we see the most unstable modes of the full spectrum correspond to the largest magnitude eigenvalues of ${\bf K}_{1}$.  Thus there is a clear separation in the Koopman spectrum across lag values, which is to say time scales in the dynamics.     
+\begin{figure}[!h]
+\centering
+\begin{tabular}{c}
+\includegraphics[width=1\textwidth]{Kuramoto_detail_spectrum_w_mx_lag_158} \end{tabular}
+\caption{Full spectrum (a) and reduced spectrum (b) of corresponding ERDMD Koopman operator for Kuramoto--Sivashinsky.  The ERDMD algorithm converges to $l_{c}=\left\{1, 123, 141, 158\right\}$.  The solid/red line is the unit circle, provided for comparison. In (c), we compare the full spectrum (black/dots) to the interior reduced approximation (blue/x) and the outer reduced approximation (green/x) in a region with angular apperature of $\pi/8$.}
+\label{fig:ksspectrum}
+\end{figure}
+
+
 \bibliographystyle{unsrt}
 \bibliography{ionosphere_bib}
 \end{document}
