--- a/ionosphere_bib.bib
+++ b/ionosphere_bib.bib
@@ -1,23 +1,4 @@
-@ARTICLE{otsu,
-  author={Otsu, Nobuyuki},
-  journal={IEEE Transactions on Systems, Man, and Cybernetics}, 
-  title={A Threshold Selection Method from Gray-Level Histograms}, 
-  year={1979},
-  volume={9},
-  number={1},
-  pages={62-66},
-  doi={10.1109/TSMC.1979.4310076}}
-  
-@ARTICLE{gilles,
-  author={Gilles, Jérôme},
-  journal={IEEE Transactions on Signal Processing}, 
-  title={Empirical Wavelet Transform}, 
-  year={2013},
-  volume={61},
-  number={16},
-  pages={3999-4010},
-  doi={10.1109/TSP.2013.2265222}}
-  
+ 
 @article{ssdmd,
 author = {Alford-Lago, Daniel J. and Curtis, Christopher W. and Ihler, Alexander T. and Zawdie, Katherine A.},
 title = {Scale-Separated Dynamic Mode Decomposition and Ionospheric Forecasting},
@@ -27,15 +8,6 @@ number = {8},
 pages = {e2022RS007637},
 year = {2023}
 }
-
-@article{idtxl, 
-year = {2019}, 
-publisher = {The Open Journal}, 
-volume = {4}, 
-number = {34}, 
-pages = {1081}, 
-author = {Patricia Wollstadt and Joseph T. Lizier and Raul Vicente and Conor Finn and Mario Martinez-Zarzuela and Pedro Mediano and Leonardo Novelli and Michael Wibral}, 
-title = {IDTxl: The Information Dynamics Toolkit xl: a Python package for the efficient analysis of multivariate information dynamics in networks}, journal = {Journal of Open Source Software} }
 
 @article{schreiber,
   title = {Measuring Information Transfer},
@@ -48,14 +20,6 @@ title = {IDTxl: The Information Dynamics Toolkit xl: a Python package for the ef
   year = {2000},
   month = {Jul},
   publisher = {American Physical Society}
-}
-
-@article{huang,
-	title={The empirical mode decomposition and the Hilbert spectrum for 					nonlinear and non-stationary time series analysis}, 
-	author={Norden E. Huang and Zheng Shen and Steven R. Long and Manli C. 					Wu and Hsing H. Shih and Quanan Zheng and Nai-Chyuan Yen and Chi 			Chao Tung and Henry H. Liu},
-	journal={Proc. Roc. Soc. A},
-	volume={454},
-	year={1998}
 }
 
 @article{granger,
@@ -181,14 +145,6 @@ YEAR=1992
 	volume = {32},
 	year = {2022}}
 
-@article{lago_ssdmd,
-	author = {D. J. Alford-Lago and C. W. Curtis and A. Ihler and K. A. Zawdie},
-	date-modified = {2022-05-04 18:57:11 -0700},
-	journal = {ArXiv (submitted to AGU Radio Sci.)},
-	title = {A scale-separated dynamic mode decomposition from observations of the ionospheric electron density profile},
-	volume = {https://doi.org/10.48550/arXiv.2204.10215},
-	year = {2022}}
-
 @book{kutz,
 	address = {Philadelphia, PA},
 	author = {J.N. Kutz and S.L. Brunton and B.W. Brunton and J.L. Proctor},
@@ -309,4 +265,73 @@ TITLE={Turbulence, Coherent Structures, Dynamical Systems, and Symmetry},
 PUBLISHER={Cambridge University Press},
 ADDRESS={Cambridge, UK},
 YEAR=2012
+}
+
+@article{ward,
+author = {Tran, Giang and Ward, Rachel},
+title = {Exact Recovery of Chaotic Systems from Highly Corrupted Data},
+journal = {Multiscale Modeling \& Simulation},
+volume = {15},
+number = {3},
+pages = {1108--1129},
+year = 2017
+}
+
+@article{taira,
+	author = {K. Taira and S.L. Brunton and S.T.M. Dawson and C.W. Rowley and T. Colonius and B.J. McKeon and O.T. Schmidt and S. Gordeyev and V. Theofilis and L.S. Ukeiley},
+	journal = {AIAA},
+	pages = {4013--4041},
+	title = {Modal Analysis of Fluid Flows: An Overview},
+	volume = {55},
+	year = 2017}
+	
+@article{duraisamy,
+    author = {Pan, Shaowu and Duraisamy, Karthik},
+    title = "{On the structure of time-delay embedding in linear models of non-linear dynamical systems}",
+    journal = {Chaos: An Interdisciplinary Journal of Nonlinear Science},
+    volume = {30},
+    number = {7},
+    pages = {073135},
+    year = {2020},
+    month = {07}    
+}
+
+@article{curtis_dldmd,
+    author = {Curtis, Christopher W. and Jay Alford-Lago, D. and Bollt, Erik and Tuma, Andrew},
+    title = "{Machine learning enhanced Hankel dynamic-mode decomposition}",
+    journal = {Chaos: An Interdisciplinary Journal of Nonlinear Science},
+    volume = {33},
+    number = {8},
+    pages = {083133},
+    year = {2023},
+    month = {08}    
+}
+
+@article{aikake,
+author={Hirotogu, Akaike},
+title={A new look at the statistical model identification.},
+journal={IEEE Transactions on Automatic Control},
+volume={19},
+pages={716--723},
+year=1974
+}
+
+@article{champion2,
+author = {Champion, Kathleen P. and Brunton, Steven L. and Kutz, J. Nathan},
+title = {Discovery of Nonlinear Multiscale Systems: Sampling Strategies and Embeddings},
+journal = {SIAM Journal on Applied Dynamical Systems},
+volume = {18},
+number = {1},
+pages = {312-333},
+year = 2019
+}
+
+@article{kutz4,
+author = {Kamb, Mason and Kaiser, Eurika and Brunton, Steven L. and Kutz, J. Nathan},
+title = {Time-Delay Observables for Koopman: Theory and Applications},
+journal = {SIAM Journal on Applied Dynamical Systems},
+volume = {19},
+number = {2},
+pages = {886-917},
+year = 2020
 }
