--- a/square_games.tex
+++ b/square_games.tex
@@ -19,14 +19,14 @@
     \rput(2.75,4){${\bf y}^{(+)}$}
     \rput(3.65,4){$=$}
     
-    \psframe[linecolor=black,fillstyle=solid,fillcolor=myyellow](4,2)(8,6)      	\rput(6,4){\textbf{$\tilde{\bf K}_{1}$}} % Scaled position
+    \psframe[linecolor=black,fillstyle=solid,fillcolor=myyellow](4,2)(8,6)      	\rput(6,4){\Large \textbf{$\tilde{\bf K}_{1}$}} % Scaled position
     
     \psframe[linecolor=black,fillstyle=solid,fillcolor=mypurple](8.25,2)(9.25,6) % Black border
     \rput(8.75,4){${\bf y}^{(-)}_{1}$}
 
     \rput(10.1,4){$+~\cdots~+$}
     
-    \psframe[linecolor=black,fillstyle=solid,fillcolor=myyellow](11,2)(15,6)     	\rput(13,4){\textbf{$\tilde{{\bf K}}_{l_{k}}$}} % Scaled position
+    \psframe[linecolor=black,fillstyle=solid,fillcolor=myyellow](11,2)(15,6)     	\rput(13,4){\Large \textbf{$\tilde{{\bf K}}_{l_{k}}$}} % Scaled position
     
 	\rput(3.65,-.5){$+$}
         
@@ -34,7 +34,7 @@
     \rput(15.75,4){${\bf y}^{(-)}_{l_{k}}$}
     
     \psframe[linecolor=black,fillstyle=solid,fillcolor=myyellow](4,-2.5)(8,1.5)      	
-    \rput(6,-.5){\textbf{$\tilde{\bf K}_{l_{k}+j}$}} % Scaled position
+    \rput(6,-.5){\Large \textbf{$\tilde{\bf K}_{l_{k}+j}$}} % Scaled position
     
     \psframe[linecolor=black,fillstyle=solid,fillcolor=mypurple](8.25,-2.5)(9.27,1.5) % Black border
     \rput(8.75,-.5){${\bf y}^{(-)}_{l_{k}+j}$}
@@ -47,14 +47,14 @@
     \rput(3.65,10){$=$}
     
     \psframe[linecolor=black,fillstyle=solid,fillcolor=myyellow](4,8)(8,12) % Scaled dimensions
-    \rput(6,10){\textbf{${\bf K}_{1}$}} % Scaled position
+    \rput(6,10){\Large \textbf{${\bf K}_{1}$}} % Scaled position
 
     \psframe[linecolor=black,fillstyle=solid,fillcolor=mypurple](8.25,8)(9.25,12) % Black border
     \rput(8.75,10){${\bf y}^{(-)}_{1}$}
     \rput(10.1,10){$+~\cdots~+$}
     
     \psframe[linecolor=black,fillstyle=solid,fillcolor=myyellow](11,8)(15,12) 
-    \rput(13,10){\textbf{$\bf K_{l_{k}}$}} % Scaled position
+    \rput(13,10){\Large \textbf{$\bf K_{l_{k}}$}} % Scaled position
     
     \psframe[linecolor=black,fillstyle=solid,fillcolor=mypurple](15.25,8)(16.27,12) % Black border    
     \rput(15.75,10){${\bf y}^{(-)}_{l_{k}}$}
