--- a/square_games_prune.tex
+++ b/square_games_prune.tex
@@ -4,11 +4,11 @@
 \usepackage{auto-pst-pdf} % if you are using pdflatex
 
 \pagestyle{empty}
-
 \begin{document}
 \begin{pspicture}(12,22) % Adjust the dimensions as needed (twice as large)
     \definecolor{myyellow}{RGB}{255, 255, 153}
-	\definecolor{mypurple}{RGB}{255, 153, 255}
+    \definecolor{mypurple}{RGB}{255, 153, 255}
+    \definecolor{mygree}{RGB}{0, 204, 102}	
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	
     \rput(1.,-5){\LARGE {\bf Find:}}    
