--- a/writeup/er_dmd.tex
+++ b/writeup/er_dmd.tex
@@ -7,6 +7,7 @@
 \usepackage{amssymb}
 \usepackage{amsthm}
 \usepackage{graphicx}
+\usepackage{authblk}
 %\usepackage{caption}
 %\usepackage{subcaption}
 
@@ -45,6 +46,14 @@
 \newcommand{\gnorm}[1]{\left|\left|#1\right|\right|}
 
 \title{Information Theoretic Discovery of Lagged Dynamic Mode Decomposition Models}
+
+\author[1]{Christopher W. Curtis}
+\author[1,2]{Daniel Jay Alford-Lago}
+\author[3,4]{Erik Bollt}
+\affil[1]{Department of Mathematics and Statistics, SDSU}
+\affil[2]{Naval Information Warfare Center}
+\affil[3]{Department of Electrical and Computer Engineering, Clarkson University}
+\affil[4]{Clarkson Center for Complex Systems Science, Clarkson University}
 \date{}
 \begin{document}
 \maketitle
@@ -177,8 +186,8 @@ Thus, we can see how the ER approach can be used to enhance the  HODMD.  We agai
 \end{enumerate}
 \begin{figure}
 \centering
-%\includegraphics[scale=.75]{square_games-pics}
-\includegraphics[scale=.75]{square_games}
+\includegraphics[scale=.75]{square_games-pics}
+%\includegraphics[scale=.75]{square_games}
 \caption{The BUILD stage of the ERDMD algorithm.  Here, we start from the given model ${\bf M}_{gvn}$ which represents the choice of lags $(1, \cdots, l_{k})$ with correspondig matrices $({\bf K}_{1}, \cdots, {\bf K}_{l_{k}})$, and we then find a proposed model ${\bf M}^{(j)}_{prp}$ which maximizes $I({\bf y}^{+}, {\bf M}^{(j)}_{prp}|{\bf M}_{gvn})$, or the information gain in using the proposed model relative to the given model to anticipate the next time steps represented by ${\bf y}^{(+)}$.}  
 \label{fig:build_stage}
 \end{figure}
@@ -246,7 +255,7 @@ We now examine how well our method performs on the Lorenz-63 system, given by th
 \end{align*}
 with $\sigma=10$, $\rho=28$, and $\beta = 8/3$.  These parameter choices ensure that trajectories are pulled onto a strange attractor and exhibit chaotic dynamics.  We test our method on numerically generated data.  Time stepping is done with standard Runge--Kutta 4.For our numerics, the time step is $dt=.01$, and we run the simulation from $0\leq t \leq 22$.  
 
-We look at data for $20\leq t \leq 22$, with $d=150$, corresponding to $1.5$ units of non-dimensional time.  We then compare our ER-DMD model to a model using all possible lags for $21.5\leq t \leq 22$.  The ERDMD algorithm converges to $l_{c}=\left\{1,149\right\}$.  The results are seen in Figure \ref{fig:lorenz_compare_d_150}.  As can be seen, all three curves are indistinguishable to the eye, showing that a far more minimal lag model is able to reconstruct dynamics with as much practical accuracy as the full HODMD method.  Further, looking beyond the reconstruction to the forecast regime, we see the ERDMD model does a generally better job beyond the data, thereby implying that the HODMD model is overfitting.  
+We look at data for $20\leq t \leq 22$, with $d=150$, corresponding to $1.5$ units of non-dimensional time.  We then compare our ER-DMD model to a model using all possible lags for $21.5\leq t \leq 22$.  The ERDMD algorithm converges to $l_{c}=\left\{1,149\right\}$.  The results of running the two models in both reconstruction and forecasting modes are seen in Figure \ref{fig:lorenz_compare_d_150}.  In the error plots in Figure \ref{fig:lorenz_compare_d_150} (b), we see that throughout the reconstruction region, the HODMD is categorically more accurate than the ERDMD method by several orders of magnitude.  However, practically speaking, the approximation provided by the ERDMD is still quite good.  Further, looking beyond the reconstruction to the forecast regime, we see the ERDMD model does a generally better job beyond the data, thereby implying that the HODMD model is probably overfitting.  
 \begin{figure}[!h]
 \centering
 \begin{tabular}{c}
@@ -290,7 +299,8 @@ Looking at the detail figure in Figure \ref{fig:lorenz_spectrum_d_150}, we see t
 By way of contrast though, if we set the maximum lag $d=100$, and build reconstructions for $21\leq t \leq 22$, we find that the ERDMD results differ  markedly in terms of the determined lags though ultimately not in terms of accuracy; see Figure \ref{fig:lorenz_compare_d_100}.  In this case, the ERDMD algorithm converges onto the lag choices 
 $$
 l_{c}=\left\{1,15, 26, 35, 45, 48, 68, 73, 97,99\right\}.
-$$  By choosing a lag horizon which does not fully capture the approximate period of oscillation in the dynamics, we need significantly more information to accurately reconstruct the data, though still nowhere as much as the full HODMD model.  
+$$  
+By choosing a lag horizon which does not fully capture the approximate period of oscillation in the dynamics, we need significantly more information to accurately reconstruct the data, though still nowhere as much as the full HODMD model.  We also see though that the smaller choice of $d$ causes both models to essentially fail at providing any reasonable forecast, again reflecting the importance of good choices of $d$ in the first place, a result which echoes the work in \cite{duraisamy}.
 \begin{figure}[!h]
 \centering
 \includegraphics[width=.8\textwidth]{Lorenz_error_compare_w_mx_lag_100}
@@ -350,7 +360,7 @@ We build reconstructions for $25\leq t \leq 40$.  To get accurate results, we ch
 \[
 l_{c} = \left\{1, 3, 170, 436, 553, 665, 988\right\}.
 \]
-As can be seen in Figure \ref{fig:rossler}, our accuracy relies on capturing a full departure from the fast through the slow manifold.  This also explains the need for such a large choice of $d$ relative to what was used for the Lorenz-63 system.  
+As can be seen in Figure \ref{fig:rossler}, our accuracy relies on capturing a full departure from the fast through the slow manifold.  This also explains the need for such a large choice of $d$ relative to what was used for the Lorenz-63 system.  Likewise, as with the Lorenz-63 system, the error in the ERDMD approximation is several orders of magnitude larger than for HODMD, though the practical difference is minimal.  Neither model does well forecasting the next fast departarure from the planar oscillator reflecting an inherent difficult in learning slow/fast chaotic dynamics.  
 \begin{figure}[!h]
 \centering
 \begin{tabular}{c}
@@ -363,7 +373,7 @@ As can be seen in Figure \ref{fig:rossler}, our accuracy relies on capturing a f
 \label{fig:rossler}
 \end{figure}
 
-Comparing the HODMD and ERDMD models for the Rossler system, we see in Figure \ref{fig:model_comp_d_988} somewhat peculiar results.  Unlike for the Lorenz system, the norms of the lag matrices in the ERDMD model span ten order of magnitude.  Moreover, while ${\bf K}_{1}$ and ${\bf K}_{3}$ have relatively large norms, the remaining lag matrices are $10^{-10}$ times smaller, so all of the long time lag matrices are categorically miniscule in comparison.  So how can they have any meaningful impact within the model?  
+Comparing the HODMD and ERDMD models for the Rossler system, we see in Figure \ref{fig:model_comp_d_988} somewhat peculiar results.  Unlike for the Lorenz system, the norms of the lag matrices in the ERDMD model span ten orders of magnitude.  Moreover, while ${\bf K}_{1}$ and ${\bf K}_{3}$ have relatively large norms, the remaining lag matrices are $10^{-10}$ times smaller, so all of the long time lag matrices are categorically miniscule in comparison.  So how can they have any meaningful impact within the model?  
 \begin{figure}[!h]
 \centering
 \includegraphics[width=.7\textwidth]{Rossler_norm_full_model_988}
@@ -426,7 +436,7 @@ To study the ERDMD method, we choose $d=200$, which for $dt=.25$ corresponds to 
 \[
 l_{c}=\left\{1, 123, 141, 158\right\}.
 \]
-The results for reconstruction can be seen in Figure \ref{fig:ks_compare_d_200}, we where we look at times $10\leq t \leq 66$.  As can be seen, the ERDMD does quite well, though we note that if we look for longer reconstructions, errors do start to appear more rapidly for the ERDMD method than the full HODMD method.  
+The results for reconstruction can be seen in Figure \ref{fig:ks_compare_d_200}, we where we look at times $10\leq t \leq 66$.  As can be seen, the ERDMD does well, though we note that if we look for longer reconstructions, errors do start to appear more rapidly for the ERDMD method than the full HODMD method, and we are not able to push the ERDMD method to reproduce the entire reconstruction region from initial conditions.  Thus, we while the present results are promising, they represent an edge for our method that will need further tools to address; see \cite{curtis_dldmd} in this direction.    
 \begin{figure}[!h]
 \centering
 \includegraphics[width=1\textwidth]{ks_dynamics_compare}
